# CNN_Classifier

./: LICENSE  README.md  init_setup.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py
configs/: configs.yaml
research/: trials.ipynb
src/CNNClassifier/: __init__.py
src/CNNClassifier/components/: stage01_data_ingestion.py
src/CNNClassifier/config/: configuration.py
src/CNNClassifier/constants/: __init__.py
src/CNNClassifier/pipeline/: stage01_data_ingestion.py
src/CNNClassifier/utils/: utils.py
