[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7    

[options.extras_require]
testing =
    pytest>=7.1.3  # testing if use locally test,unit testing,integration and all
    mypy>=0.971    # if we have error detect that
    flake8>=5.0.4   # maintain standarization ,remove un-nesacessary spaces , commas used it ill takecare for that
    tox>=3.25.1     # 
    black>=22.8.0    

[options.package_data]
deepClassifier = py.typed
  
[flake8]
max-line-length = 160
exclude = __init__.py